--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -5,6 +5,6 @@ import { FAQSection } from '@/components/sections/faq';
 import DefaultLayout from '@/layouts/DefaultLayout.astro';
 ---
 
-<DefaultLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
+<DefaultLayout title={'FAQs - ' + SITE_TITLE} description={SITE_DESCRIPTION}>
   <FAQSection client:load />
 </DefaultLayout>
