--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -39,22 +39,7 @@ const imageURL = new URL(finalImage, Astro.url);
 </script>
 
 <!-- Favicon -->
-
-{
-  SITE_METADATA.icons.icon.map((icon) => (
-    <link rel="icon" type={icon.type} sizes={icon.sizes} href={icon.url} />
-  ))
-}
-{
-  SITE_METADATA.icons.apple.map((icon) => (
-    <link rel="apple-touch-icon" sizes={icon.sizes} href={icon.url} />
-  ))
-}
-{
-  SITE_METADATA.icons.shortcut.map((icon) => (
-    <link rel="shortcut icon" href={icon.url} />
-  ))
-}
+<link rel="icon" href="/favicon/favicon.ico" type="image/x-icon" />
 
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
