--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,5 +7,5 @@ import DefaultLayout from '@/layouts/DefaultLayout.astro';
   title="404: Not Found"
   description="Sorry, the page you're looking for doesn't exist."
 >
-  <NotFound client:load />
+  <NotFound />
 </DefaultLayout>
