--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 import { Compatibility } from '@/components/sections/compatibility';
 import { Features } from '@/components/sections/features';
+import { Features2 } from '@/components/sections/features2';
 import { Hero } from '@/components/sections/hero';
 import { Testimonials } from '@/components/sections/testimonials';
 import { HomeFAQSection } from '@/components/sections/home-faq';
@@ -19,6 +20,7 @@ import DefaultLayout from '@/layouts/DefaultLayout.astro';
   <Hero client:load />
   <Features client:load />
   <Testimonials client:load />
+  <Features2 client:load />
   <Comparison client:load />
   <HomeFAQSection client:load />
 </DefaultLayout>
